[package]
name = "sfrx"
keywords = ["salesforce", "sfdx"]
repository = "https://github.com/michael-ploetz/sfrx"
readme = "README.md"
version = "0.1.2"
edition = "2021"
description = "Rust lib to wrap sfdx-cli commands"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
